--- a/03_Web_App_Opgave_mere_dybde/style.css
+++ b/03_Web_App_Opgave_mere_dybde/style.css
@@ -94,7 +94,32 @@ header.hidden:hover .menuitem{
 }
 
 #page2{
-    background-color: gray;
+    background-color: purple;
+    grid-template-columns: 3fr 7fr;
+}
+
+#page2 .left{
+    width: 100%;
+    height: 100%;
+
+    display: grid;
+    place-items: center;
+    padding: 2rem;
+    background-color: whitesmoke;
+    font-size: 1.5rem;
+}
+
+#page2 .right{
+    width: 100%;
+    height: 100%;
+
+    display: grid;
+    grid-template-columns: 2fr 5fr 3fr;
+}
+
+#image1{
+    background-image: url(./assets/joel-filipe-QwoNAhbmLLo-unsplash.jpg);
+    background-size: cover;
 }
 
 #page3{
