--- a/03_Web_App_Opgave_final/style.css
+++ b/03_Web_App_Opgave_final/style.css
@@ -103,6 +103,17 @@ header.hidden:hover .menuitem{
 
 }
 
+.hover{
+    font-size:10rem;
+    visibility:hidden;
+}
+ 
+#member1:hover .hover{
+    visibility:visible;
+    background-color: black;
+}
+
+
 #page2 #member1{
     width: 100%;
     height: 100%;
@@ -140,6 +151,17 @@ header.hidden:hover .menuitem{
 }
 
 
+.hover{
+    font-size:10rem;
+    visibility:hidden;
+}
+ 
+#member1:hover .hover{
+    visibility:visible;
+    background-color: black;
+}
+
+
 
 
 
@@ -156,7 +178,7 @@ header.hidden:hover .menuitem{
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 3fr 3fr;
 }
-}
+
 
 #page3 div{
     width: 100%;
