--- a/04_data/style.css
+++ b/04_data/style.css
@@ -27,7 +27,7 @@ header#leftmenu{
     width:20vw;
     height:100vh;
     grid-template-columns: auto;
-    grid-template-rows: repeat(4, 10rem);
+        grid-template-rows: repeat(4, 10rem);
 }
 
 .menuitem{
@@ -110,4 +110,8 @@ header.hidden:hover .menuitem{
 h1{
     font-family: Raleway;
     color:hotpink;
+}
+
+p{
+    font-size: 2rem;
 }
