--- a/asynkron programmering intro/style.css
+++ b/asynkron programmering intro/style.css
@@ -60,16 +60,19 @@ header{
     place-items:center;
     background-size: cover;
     position:relative;
-    overflow: scroll;
     /* Gør hvert indlæg til en grid container:
        - 'display:grid' og 'place-items:center' centrerer indholdet i indlægget.
        - 'position:relative' gør det muligt at positionere indre elementer absolut i forhold til .post. */
 }
 
 .post h1{
-    color:grey;
+    color:white;
     font-size:1.5rem;
     font-weight:bold;
+    background-color: rgba(0,0,0, 0.8);
+    padding: 1rem;
+    border-radius: 1rem;
+
     /* Styling af overskriften i hvert indlæg */
 }
 
